Add component image to support browser concept

--- a/A-Internet/[27-8-2022] Browser.md
+++ b/A-Internet/[27-8-2022] Browser.md
@@ -14,7 +14,7 @@ In the higher level structure, those are main components of a browser:
   - **UI backend**: used for drawing basic widgets like combo boxes and windows. This backend exposes a generic interface that is not platform specific. Underneath it uses operating system user interface methods.
   - **JavaScript interpreter**: Used to parse and execute JavaScript code.
   - **Data storage**: This is a persistence layer. The browser may need to save all sorts of data locally, such as cookies. Browsers also support storage mechanisms such as localStorage, IndexedDB, WebSQL and FileSystem.
-
+![web-browser](https://user-images.githubusercontent.com/6258714/187022846-470777b9-69d5-4619-a2ff-2bbacdd3a4c7.png)
 
 ## How it works?
 The browser working flow follows these steps:
