--- a/D-Programming-Language/go/[2022-11-25] 1 Pointers.md
+++ b/D-Programming-Language/go/[2022-11-25] 1 Pointers.md
@@ -27,3 +27,5 @@ Pointers in Golang is a variable that is used to store the memory address of ano
   - Types with internal poiters
     - All assignment operators in Go are copy operations
     - Slice and maps contain internal pointers, so copies point to same underlying data
+
+*Read more about pointes:* https://go101.org/article/pointer.html
